observability-platform/k8s-manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "obs-cluster-grafana"
    # Tells the AWS Load Balancer Controller to provision an Application Load Balancer (ALB)
    kubernetes.io/ingress.class: alb
    
    # Expose the ALB to the public internet
    alb.ingress.kubernetes.io/scheme: internet-facing
    
    # Direct routing to pod IP (requires VPC CNI, standard in EKS)
    alb.ingress.kubernetes.io/target-type: ip
    
    # Set listen ports
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-grafana
                port:
                  number: 80
